1.rxjava; 2.gc 测试，jvm的slot释放